# amp-onboard-ai-service

./: .env  README.md  alembic.ini  pyproject.toml  requirements.txt  smoke.db
app/: __init__.py  main.py
app/config/: __init__.py  config_manager.py  settings.py
app/controllers/: __init__.py  admin_controller.py  auth_controller.py  health_controller.py  onboarding_controller.py
app/core/: __init__.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  security.py
app/data/: faq_knowledge.json
app/db/: __init__.py  base.py  models.py  session.py
app/engines/: __init__.py  faq_engine.py  journey_engine.py  mentor_engine.py  profile_engine.py  regeneration_engine.py
app/llm/: __init__.py  base.py  factory.py
app/middleware/: request_logging.py
app/models/: __init__.py  admin.py  base.py  faq.py  journey.py  mentor.py  profile.py  profile_snapshot.py  regeneration.py  user.py
app/repositories/: __init__.py  admin_repository.py  base.py  journey_repository.py  mock_in_memory.py  profile_repository.py  seed_data.py  user_repository.py
app/routers/: __init__.py  admin.py  auth.py  branding.py  health.py  onboarding.py
app/schemas/: __init__.py  admin.py  auth.py  common.py  faq.py  health.py  journey.py  (+4 more)
dev_summary/: backend_baseline.md
migrations/: env.py
prompts/: .gitkeep  faq_answer.txt  journey_generation.txt  journey_regeneration.txt  mentor_guidance.txt  profile_analysis.txt
scripts/: e2e_smoke.py
tests/: test_admin.py  test_auth.py  test_core.py  test_engines.py  test_health.py  test_onboarding.py  test_sql_repositories.py
(+28 files in other folders)
