[project]
name = "amp-onboard-ai-service"
version = "0.1.0"
description = "AMP Onboard AI Service - Backend Foundation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
